--- a/css/about.css
+++ b/css/about.css
@@ -109,7 +109,7 @@ html {
 }
 .hero__header {
     color: #FEFCF7;
-    font-family: Fraunces 9pt;
+    font-family: Fraunces;
     font-size: 40px;
     font-style: normal;
     font-weight: 900;
@@ -195,20 +195,35 @@ html {
         font-size: 15px;
         font-style: normal;
         font-weight: 400;
-        line-height: 25px; /* 166.667% */
+        line-height: 25px;
         margin: 0; 
     }
     
 }
 
-.commit {
-}
-.commit__content {
-    max-width: 540px;
+.commit--before::before {
+    content: "";
+    display: block;
+    border-radius: 8px;
+    background-color: #0E8784;    
+    background-image:url("../img/commit.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 445px;
+    height: 520px;    
+    margin-right: 30px;
+
 }
 
-.commit__content::before{
-    
+.commit--before{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 168px 85px 160px 85px;
+}
+
+.commit__content{
+    max-width: 540px;
 }
 
 .commit__content-header {
@@ -219,6 +234,8 @@ html {
     font-weight: 900;
     line-height: 48px; 
     margin: 0;    
+    margin-bottom: 32px;
+    max-width: 540px;
 }
 .commit__content-parag {
     color: #333D4B;
@@ -226,7 +243,412 @@ html {
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
-    line-height: 26px; /* 162.5% */
+    line-height: 26px;
     opacity: 0.8;
     margin: 0;    
+    max-width: 540px;
+}
+
+@media only screen and (max-width:800px){
+    .commit--before::before {
+        content: "";
+        display: block;
+        border-radius: 8px;
+        background-color: #0E8784;    
+        background-image:url("../img/commit-table.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 281px;
+        height: 470px;    
+        margin-right: 69px;
+    }
+    
+    .commit--before{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin: 0;
+        margin-top: 144px;
+        margin-bottom: 300px;
+    }
+
+    .commit__content{
+        max-width: 339px;
+    }
+    
+    .commit__content-header {
+        color: #333D4B;
+        font-family: Fraunces;
+        font-size: 32px;
+        font-style: normal;
+        font-weight: 900;
+        line-height: 48px;
+        margin: 0;    
+        margin-bottom: 30px;
+    }
+    .commit__content-parag {
+        color: #333D4B;
+        font-family: Barlow;
+        font-size: 15px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 25px;
+        opacity: 0.8;
+        margin: 0;    
+    }
+}
+
+@media only screen and (max-width:450px){
+    .commit--before::before {
+        content: "";
+        display: block;
+        border-radius: 8px;
+        background-color: #0E8784;    
+        background-image:url("../img/commit-table.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 327px;
+        height: 466px;    
+        margin: 0 auto;
+        margin-bottom: 48px;
+    }
+    
+    .commit--before{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 120px;
+    }
+
+    .commit__content{
+        max-width: 327px;
+        text-align: center;
+    }
+    
+    .commit__content-header {
+        color: #333D4B;
+        text-align: center;
+        font-family: Fraunces ;
+        font-size: 32px;
+        font-style: normal;
+        font-weight: 900;
+        line-height: 48px; 
+        margin: 0;    
+        margin-bottom: 30px;
+    }
+    .commit__content-parag {
+        color: #333D4B;
+        text-align: center;
+        font-family: Barlow;
+        font-size: 15px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 25px;
+        opacity: 0.8;
+        margin: 0;    
+    }
+}
+
+.quality {
+    border-radius: 10px;
+    background: #2C343E;    
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-right: 85px;
+    padding-left: 85px;
+    padding-bottom: 88px;
+}
+
+.quality::after{
+    margin-top: -88px;
+    content:"";
+    border-radius: 8px; 
+    background-color: #0E8784;
+    background-image:url("../img/quality-img.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 445px;
+    height: 474px;
+    display: block;
+
+}
+
+.quality__content {
+    max-width: 540px;
+    margin-right: 30px;
+}
+.quality__content-header {
+    margin: 0;
+    color: #FEFCF7;
+    font-family: Fraunces;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 48px;    
+    margin-bottom: 32px;
+}
+.quality__content-parag {
+    color: #FEFCF7;
+    font-family: Barlow;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+    margin: 0;
+    opacity: 0.8;    
+}
+
+@media only screen and (max-width:800px){
+    .quality{
+        flex-direction:column-reverse;
+        padding-bottom: 67px;
+        padding-left: 74px;
+        padding-right: 74px;
+
+    }
+    
+    .quality::after{
+        margin-top: -151px;
+        content:"";
+        border-radius: 8px; 
+        background-color: #0E8784;
+        background-image:url("../img/quality-table.png");
+        background-repeat: no-repeat;
+        background-size: cover;
+        max-width: 573px;
+        height: 320px;
+        display: block;
+    }
+    
+    .quality__content {
+        max-width: 540px;
+        width: 100%;
+        margin: 0;
+    }
+    .quality__content-header {
+        margin: 0;
+        color: #FEFCF7;
+        text-align: center;
+        font-family: Fraunces;
+        font-size: 32px;
+        font-style: normal;
+        font-weight: 900;
+        line-height: 48px; /* 150% */    
+        margin-bottom: 24px;
+        margin-top: 64px;
+    }
+    .quality__content-parag {
+        color: #FEFCF7;
+        text-align: center;
+        font-family: Barlow;
+        font-size: 15px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 25px; /* 166.667% */
+        margin: 0;
+        opacity: 0.8;    
+    }
+}
+
+@media only screen and (max-width:450px){
+    .quality{
+        flex-direction:column-reverse;
+        padding-bottom: 61px;
+        padding-left: 24px;
+        padding-right: 24px;
+
+    }
+    
+    .quality::after{
+        margin-top: -85px;
+        content:"";
+        border-radius: 8px; 
+        background-color: #0E8784;
+        background-image:url("../img/quality-table.png");
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 279px;
+        height: 156px;
+        display: block;
+    }
+    
+    .quality__content {
+        max-width: 540px;
+        margin: 0;
+    }
+    .quality__content-header {
+        margin: 0;
+        color: #FEFCF7;
+        text-align: center;
+        font-family: Fraunces;
+        font-size: 32px;
+        font-style: normal;
+        font-weight: 900;
+        line-height: 48px; /* 150% */    
+        margin-bottom: 24px;
+        margin-top: 64px;
+    }
+    .quality__content-parag {
+        color: #FEFCF7;
+        text-align: center;
+        font-family: Barlow;
+        font-size: 15px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 25px; /* 166.667% */
+        margin: 0;
+        opacity: 0.8;    
+    }
+}
+
+.branch {
+    margin: 168px 150px 168px 85px;
+}
+.branch__content {
+}
+.brabch__content-header {
+    color: #83888F;
+    font-family: Fraunces;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 32px; 
+    margin: 0;  
+}
+.branch__list {
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    margin: 0;
+    padding: 0;
+}
+.branch__item {
+    width: 285px;
+}
+.branch__item-header {
+    color: #333D4B;
+    font-family: Fraunces;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 36px; 
+    margin: 0;
+}
+.branch__item-info {
+    color: #333D4B;
+    font-family: Barlow;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px; 
+    margin: 0;    
+}
+.brabch__content-tel {
+    color: #333D4B;
+    font-family: Barlow;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+    text-decoration: none;   
+}
+
+.branch--uk::before{
+    content:"";
+    background-image: url("../img/branch1.svg");
+    background-repeat: no-repeat;
+    width: 40.842px;
+    height: 49.072px;
+    display: block;
+    margin-bottom: 46px;    
+    margin-top: 72px;
+}
+
+.branch--canada::before{
+    content:"";
+    background-image: url("../img/branch2.svg");
+    background-repeat: no-repeat;
+    width: 51.559px;
+    height: 49.956px;
+    display: block;
+    margin-bottom: 46px;    
+    margin-top: 72px;
+}
+
+.branch--australia::before{
+    content:"";
+    background-image: url("../img/branch3.svg");
+    background-repeat: no-repeat;
+    width: 48.968px;
+    height: 43.94px;
+    display: block;
+    margin-bottom: 46px;  
+    margin-top: 72px;  
+}
+
+
+
+
+/* FOOTER */
+
+/* .footer {
+    background-color: #2C343E;
+    padding-top: 47px;
+    padding-bottom: 47px;
+} */
+
+.footer__content {
+    background-color: #2C343E;
+    display: flex;
+    align-items: center;
+    padding-left: 85px;
+    padding-right: 85px;
+    padding-top: 47px;
+    padding-bottom: 47px;
+}
+
+.footer__nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-grow: 1;
+}
+
+.footer__lists {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    gap: 33px;
+    margin-left: 103px;
+}
+
+.footer__item a {
+    text-decoration: none;
+    color: #83888F;
+    font-family: Barlow;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 15px; 
+    letter-spacing: 0.923px;
+    text-transform: uppercase;    
+    transition: color 1.2s ease;
+}
+
+.footer__item a:hover{
+    color: #FEFCF7;
+    font-family: Barlow;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 15px; /* 125% */
+    text-transform: uppercase;    
+}
+
+.footer__icon {
+    display: flex;
+    gap: 24px;
+    cursor: pointer;
 }
